@@ -1,3 +1,9 @@
+2005-11-08  Jb Evain  <jbevain@gmail.com>
+
+	* Mono.Cecil/GenericInstanceType.cs
+	  Mono.Cecil/TypeReference.cs:
+		Fix a regression with 2.0 assemblies.
+
 2005-11-03  Jb Evain  <jbevain@gmail.com>
 
 	* Mono.Cecil/CallSite.cs
